--- a/index.html
+++ b/index.html
@@ -12,59 +12,60 @@
 <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
-<title>BitCoinViewer</title>
+<title>Y-News</title>
 </head>
 <body>
 <div id="top">
 <div id="header">
 </div><!-- /#header-->
 <div id="contents">
-<h1>BitcoinViewer Ver.0.2</h1>
-<h2>Interval</h2>
+<h1>記事の更新速度</h1>
 <form>
-<select id="interval" size="5">
-	<option value="5">5sec</option>
-	<option value="10" selected>10sec</option>
-	<option value="30">30sec</option>
-	<option value="60">1min</option>
-	<option value="300">5min</option>
+<select id="seconds" size="3">
+	<option value="2">4秒</option>
+	<option value="3" selected>6秒</option>
+	<option value="4">8秒</option>
+	<option value="5">10秒</option>
+	<option value="6">12秒</option>
+	<option value="7">14秒</option>
+	<option value="8">16秒</option>
+	<option value="9">18秒</option>
+	<option value="10">20秒</option>
+	<option value="15">30秒</option>
 </select>
 </form>
-<h2>Currency</h2>
+<h1>背景色</h1>
 <form>
-<select id="currency" size="10">
-<option value="0">sjcx_btc</option>
-<option value="1" selected>btc_jpy</option>
-<option value="2">jpyz_jpy</option>
-<option value="3">sjcx_jpy</option>
-<option value="4">fscc_jpy</option>
-<option value="5">xcp_jpy</option>
-<option value="6">xcp_btc</option>
-<option value="7">bch_btc</option>
-<option value="8">cicc_btc</option>
-<option value="9">bch_jpy</option>
-<option value="10">bitcrystals_btc</option>
-<option value="11">pepecash_jpy</option>
-<option value="12">fscc_btc</option>
-<option value="13">mona_btc</option>
-<option value="14">zaif_jpy</option>
-<option value="15">mona_jpy</option>
-<option value="16">cicc_jpy</option>
-<option value="17">erc20.cms_jpy</option>
-<option value="18">bitcrystals_jpy</option>
-<option value="19">eth_btc</option>
-<option value="20">ncxc_btc</option>
-<option value="21">ncxc_jpy</option>
-<option value="22">pepecash_btc</option>
-<option value="23">zaif_btc</option>
-<option value="24">xem_btc</option>
-<option value="25">mosaic.cms_jpy</option>
-<option value="26">eth_jpy</option>
-<option value="27">xem_jpy</option>
+<select id="bg-color" size="3">
+	<option value="1">White</option>
+	<option value="2" selected>Black</option>
+	<option value="3">Cyan</option>
+	<option value="4">Green</option>
+	<option value="5">Magenta</option>
+	<option value="6">Yellow</option>
 </select>
 </form>
-<h2>submit</h2>
+<h1>文字色（見出し）</h1>
 <form>
+<select id="index-color" size="3">
+	<option value="1">White</option>
+	<option value="2">Black</option>
+	<option value="3">Cyan</option>
+	<option value="4" selected>Green</option>
+	<option value="5">Magenta</option>
+	<option value="6">Yellow</option>
+</select>
+</form>
+<h1>文字色（本文）</h1>
+<form>
+<select id="news-color" size="3">
+	<option value="1" selected>White</option>
+	<option value="2">Black</option>
+	<option value="3">Cyan</option>
+	<option value="4">Green</option>
+	<option value="5">Magenta</option>
+	<option value="6">Yellow</option>
+</select>
 <p><input type="submit" id="b-save" value="save"></input></p>
 <p><input type="submit" id="b-cancel" value="cancel"></input></p>
 </form>
@@ -74,16 +75,19 @@
 </div><!-- /#footer-->
 </div><!-- /#top-->
 
-<script type="text/javascript">
+<script>
+
 function saveOptions() {
-	var Interval = parseInt($('#interval').val());
-	var Currency = parseInt($('#currency').val());
-	var sendValue =[interval,currency];
+	var seconds = parseInt($('#seconds').val());
+	var bg = parseInt($('#bg-color').val());
+	var index = parseInt($('#index-color').val());
+	var news = parseInt($('#news-color').val());
+	var sendValue =[seconds,bg,index,news];
 <!--alert(sendValue);-->	
 	return sendValue;
 }
 
-document.addEventListener( 'DOMContentLoaded', function() 
+$().ready(function() 
 	{
 	$("#b-cancel").click(function() 
 		{
