--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <option value="28">xem_jpy</option>
 </select>
 <h2>submit</h2>
-<p><input type="submit" id="b-save" value="save"></input></p>
-<p><input type="submit" id="b-cancel" value="cancel"></input></p>
+<p><input type="submit" id="b-save" value="save"></p>
+<p><input type="submit" id="b-cancel" value="cancel"></p>
 </form>
 
 </div><!-- /#contents-->
@@ -72,7 +72,7 @@
 </div><!-- /#footer-->
 </div><!-- /#top-->
 
-<script>
+<script type="text/javascript">
 function saveOptions() {
 	var readtime = parseInt($('#readtime').val());
 	var currency = parseInt($('#currency').val());
