--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <link rel="stylesheet" href="css/common.css" type="text/css" /> 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <title>BitCoinViewer</title>
@@ -22,7 +22,7 @@
 <h1>BitcoinViewer Ver.0.11</h1>
 <h2>Interval</h2>
 <form>
-<select id="readtime" size="5">
+<select id="interval" size="5">
 	<option value="5">5sec</option>
 	<option value="10" selected>10sec</option>
 	<option value="30">30sec</option>
@@ -72,11 +72,11 @@
 </div><!-- /#footer-->
 </div><!-- /#top-->
 
-<script type="text/javascript">
+<script>
 function saveOptions() {
-	var readtime = parseInt($('#readtime').val());
+	var interval = parseInt($('#interval').val());
 	var currency = parseInt($('#currency').val());
-	var sendValue =[readtime,currency];
+	var sendValue =[interval,currency];
 <!--alert(sendValue);-->	
 	return sendValue;
 }
